stave-macros/tests/fail/methods_requires_unknown_field.stderr
error: `missing` is not a field of this struct
  --> tests/fail/methods_requires_unknown_field.rs:11:16
   |
11 |     #[requires(missing)]
   |                ^^^^^^^
